fix width overflow

--- a/src/css/parts/elements.css
+++ b/src/css/parts/elements.css
@@ -499,6 +499,7 @@ a.math-equation-error {
 	&.block-center {
 		margin-right: auto;
 		margin-left: auto;
+		max-width: 100%;
 	}
 
 	& img.image {
